--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@
   color: #585123 #eec170 #f2a65a #f58549 #772f1a;
 }
 
-/*.carousel-container {
-  width: 900px;
-}*/
+.carousel-container {
+  width: 80vw;
+}
 
 /*.carousel-item {
   width: 900px;
