--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,20 @@
   width: 80vw;
 }
 
+body {
+  padding: 0 !important;
+  margin: 0;
+}
+
 /*.carousel-item {
   width: 900px;
   height: 600px;
 }*/
 
-body {
+/*body {
   background-color: rgb(221, 255, 244);
-}
+}*/
+
 .york-logo {
   width: 150px;
 }
