--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,41 @@
   color: #585123 #eec170 #f2a65a #f58549 #772f1a;
 }
 
-.carousel-container {
-  width: 80vw;
+:root {
+  --light-green-palette: #c8ffd0;
+  --dark-green-palette: #536255;
+  --green-grey-palette: #9fafa1;
+  --light-blue-palette: #e7eeff;
+  --blue-palette: #aeb6f0;
 }
 
 body {
   padding: 0 !important;
   margin: 0;
+  background-color: var(--light-green-palette);
+}
+
+.navbar {
+  background-color: var(--light-blue-palette) !important;
+}
+
+.carousel-container {
+  padding: 0 !important;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 80vw;
+  border: 10px solid var(--green-grey-palette);
+  border-radius: 16px;
+}
+
+.carousel-inner {
+  padding: 0 !important;
+  border-radius: 6px;
+}
+
+.schedule,
+.activities {
+  padding: 0;
 }
 
 /*.carousel-item {
